Bug fixed in images upload
